# sikuli

./: .bzrignore  .gitignore  CMakeLists.txt  README.md  build-linux.txt  build-mac.txt  build-win32.bat  build-win32.txt  cleanbuildall  cleanbuildall.sh  copyright.txt  readme.txt
extensions/: CMakeLists.txt
extensions/android-robot/: CMakeLists.txt
extensions/android-robot/example/: README.txt  android-example.py  run-sikuli-monkey.sh
extensions/android-robot/example/android-example.sikuli/: android-example.py
extensions/android-robot/example/java-example/: build.xml
extensions/android-robot/exp/: run-sikuli-monkey.sh
extensions/android-robot/exp/monkey-test1.sikuli/: monkey-test1.py
extensions/android-robot/src/: MANIFEST.txt
extensions/guide/: CMakeLists.txt
sikuli-ide/: CMakeLists.txt  Makefile  Makefile.Darwin  Makefile.Linux  Makefile.win32  hudson-test.xml  install.xml  l4j-conf.xml  latest-ver  shortcut.xml  sikuli-ide-debug.sh
sikuli-ide/evaluation/: TestDrJava.py
sikuli-ide/evaluation/TestCapivara.sikuli/: TestCapivara.py
sikuli-ide/evaluation/TestJEdit.sikuli/: TestJEdit.py
sikuli-ide/patches/sikuli-0.10.1-ko-patch/: README  patch-linux.sh  patch-mac.sh  patch-windows.bat
sikuli-ide/resources/i18n/: IDE_ar.properties  IDE_bg.properties  IDE_ca.properties  IDE_da.properties  IDE_de.properties  IDE_en_US.properties  IDE_es.properties  IDE_fr.properties  IDE_he.properties  IDE_ja.properties  IDE_ko.properties  IDE_nl.properties  IDE_pl.properties  IDE_pt_BR.properties  IDE_ru.properties  IDE_sv.properties  IDE_tr.properties  IDE_uk.properties  IDE_zh_CN.properties  IDE_zh_TW.properties
sikuli-ide/resources/i18n/IDE/: IDE-ar.po  IDE-bg.po  IDE-ca.po  IDE-da.po  IDE-de.po  IDE-es.po  IDE-fr.po  IDE-he.po  IDE-ja.po  IDE-ko.po  IDE-nl.po  IDE-pl.po  IDE-pt_BR.po  IDE-ru.po  IDE-sv.po  IDE-tr.po  IDE-uk.po  IDE-zh_CN.po  IDE-zh_TW.po  IDE.pot  zh_TW.po
sikuli-ide/resources/icons/: insert-image-icon.psd  region-icon.psd  run_big.psd
sikuli-ide/resources/scripts/: clean-dot-sikuli.py  sikuli2html.py
sikuli-ide/sample-scripts/: panda.m4v
sikuli-ide/sample-scripts/clickstars.sikuli/: clickstars.html  clickstars.py
sikuli-ide/sample-scripts/deletewords.sikuli/: deletewords.html  deletewords.py
sikuli-ide/sample-scripts/find-boston.sikuli/: find-boston.html  find-boston.py
sikuli-ide/sample-scripts/findfirefox.sikuli/: findfirefox.html  findfirefox.py
sikuli-ide/sample-scripts/guide.sikuli/: guide.html  guide.py
sikuli-ide/sample-scripts/letter.sikuli/: letter.html  letter.py
sikuli-ide/sample-scripts/mute-new.sikuli/: mute-new.html  mute-simple.py  mute.html
sikuli-ide/sample-scripts/mute.sikuli/: mute.html  mute.py
sikuli-ide/sample-scripts/note.sikuli/: note.html  note.py
sikuli-ide/sample-scripts/note2.sikuli/: note2.html  note2.py
sikuli-ide/sample-scripts/observe-changes.sikuli/: observe-changes.html  observe-changes.py
sikuli-ide/sample-scripts/ocr-region.sikuli/: ocr-region.html  ocr-region.py
sikuli-ide/sample-scripts/panda.sikuli/: panda.html  panda.py
sikuli-ide/sample-scripts/pdf.sikuli/: pdf.html  pdf.py
sikuli-ide/sample-scripts/resize-app.sikuli/: resize-app.html  resize-app.py
sikuli-ide/sample-scripts/revert-ip.sikuli/: revert-ip.html  revert-ip.py
sikuli-ide/sample-scripts/rob-new.sikuli/: rob-new.html  rob-new.py  rob.html  rob.py
sikuli-ide/sample-scripts/rob.sikuli/: rob.html  rob.py
sikuli-ide/sample-scripts/search.sikuli/: search.html  search.py
sikuli-ide/sample-scripts/set-ip-new.sikuli/: set-ip-new.py  set-ip.html
sikuli-ide/sample-scripts/set-ip.sikuli/: set-ip.html  set-ip.py
sikuli-ide/sample-scripts/skype.sikuli/: skype.html  skype.py
sikuli-ide/sample-scripts/spatial-ops.sikuli/: spatial-ops.py
sikuli-ide/sample-scripts/spatial-ops2.sikuli/: spatial-ops2.py
sikuli-ide/sample-scripts/street.sikuli/: street.html  street.py
sikuli-ide/sample-scripts/test_youtube.sikuli/: test-youtube.html  test-youtube.py  test_youtube.html  test_youtube.py
sikuli-ide/sample-scripts/twitter.sikuli/: twitter.html  twitter.py
sikuli-ide/sample-scripts/type.sikuli/: type.html  type.py
sikuli-ide/sample-scripts/user-capture.sikuli/: user-capture.html  user-capture.py
sikuli-ide/sample-scripts/vdict.sikuli/: vdict.html  vdict.py
sikuli-ide/sample-scripts/victoria.sikuli/: victoria.html  victoria.py
sikuli-ide/sample-scripts/who.sikuli/: who.html  who.py
sikuli-ide/src/main/java/: CMakeLists.txt
sikuli-ide/src/main/native/: CMakeLists.txt  Makefile  NativeLayerForMac.cc  edu_mit_csail_uid_NativeLayerForMac.h  org_sikuli_ide_NativeLayerForMac.h
sikuli-ide/src/test/java/: CMakeLists.txt
sikuli-ide/test-scripts/: linux-basic.skl  mac-basic.skl  win-basic.skl
sikuli-ide/test-scripts/linux-basic.sikuli/: linux-basic.html  linux-basic.py
sikuli-ide/test-scripts/mac-basic.sikuli/: mac-basic.html  mac-basic.py
sikuli-ide/test-scripts/win-basic.sikuli/: win-basic.html  win-basic.py
sikuli-script/: CMakeLists.txt  Makefile  Makefile.common  Makefile.win32  hudson-test.xml  run-py-test.sh
sikuli-script/lib/: com
sikuli-script/src/main/java/: CMakeLists.txt  Makefile
sikuli-script/src/main/native/: CMakeLists.txt  EventManagerProxy.cc  FinderProxy.cc  MacHotkeyManager.cc  MacUtil.m  Makefile  Makefile.common  Makefile.common.win32  Makefile.libScreenMatchProxy  Makefile.libVDictProxy  Makefile.vdict  Makefile.vdict.win32  Makefile.win32  Makefile.win32util  ScreenMatchProxy.cc  TimingBlock.cc  TimingBlock.h  VDictProxy.cc  VNCNative.c  VNCNative.h  Win32Util.cc  cv-util.cpp  cv-util.h  cvgui.cpp  cvgui.h  debug.cpp  debug.h  edu_mit_csail_uid_EventManager.h  edu_mit_csail_uid_Finder.h  edu_mit_csail_uid_MacUtil.h  edu_mit_csail_uid_ScreenMatchProxy.h  edu_mit_csail_uid_ScreenMatchProxy_Match.h  edu_mit_csail_uid_VDictProxy.h  edu_mit_csail_uid_Win32Util.h  event-manager.cc  event-manager.h  find-result.h  finder.cc  finder.cpp  (+35 more)
sikuli-script/test-res/OCR/: Linux-XFCE11.csv  Mac-desktop.csv  Mac-desktop2.csv  web-twitter.csv  win-7-desktop.csv  win-vista-black.csv
(+991 files in other folders)
